include_HEADERS = \
	libhmac.h

pkginclude_HEADERS = \
	libhmac/definitions.h \
	libhmac/error.h \
	libhmac/extern.h \
	libhmac/features.h \
	libhmac/types.h

EXTRA_DIST = \
	libhmac.h.in \
	libhmac/definitions.h.in \
	libhmac/features.h.in \
	libhmac/types.h.in

DISTCLEANFILES = \
	libhmac.h \
	libhmac/definitions.h \
	libhmac/features.h \
	libhmac/types.h \
	Makefile \
	Makefile.in

