MSVSCPP_FILES = \
	hmac_test_error/hmac_test_error.vcproj \
	hmac_test_get_version/hmac_test_get_version.vcproj \
	hmacsum/hmacsum.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	libhmac.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

