MSVSCPP_FILES = \
	hmac_test_error/hmac_test_error.vcproj \
	hmac_test_get_version/hmac_test_get_version.vcproj \
	hmac_test_md5_context/hmac_test_md5_context.vcproj \
	hmac_test_sha1_context/hmac_test_sha1_context.vcproj \
	hmac_test_sha224_context/hmac_test_sha224_context.vcproj \
	hmac_test_sha256_context/hmac_test_sha256_context.vcproj \
	hmac_test_sha512_context/hmac_test_sha512_context.vcproj \
	hmacsum/hmacsum.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	libhmac.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

