MSVSCPP_FILES = \
	hmac_test_error/hmac_test_error.vcproj \
	hmac_test_md5/hmac_test_md5.vcproj \
	hmac_test_md5_context/hmac_test_md5_context.vcproj \
	hmac_test_sha1/hmac_test_sha1.vcproj \
	hmac_test_sha1_context/hmac_test_sha1_context.vcproj \
	hmac_test_sha224/hmac_test_sha224.vcproj \
	hmac_test_sha224_context/hmac_test_sha224_context.vcproj \
	hmac_test_sha256/hmac_test_sha256.vcproj \
	hmac_test_sha256_context/hmac_test_sha256_context.vcproj \
	hmac_test_sha512/hmac_test_sha512.vcproj \
	hmac_test_sha512_context/hmac_test_sha512_context.vcproj \
	hmac_test_support/hmac_test_support.vcproj \
	hmacsum/hmacsum.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pyhmac/pyhmac.vcproj \
	libhmac.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

